Formbuilders using the custom class are now hidden by default to avoid seeing any dom change

--- a/css/modules/_form.scss
+++ b/css/modules/_form.scss
@@ -1,6 +1,11 @@
 /*------ Formbuilder Module ------*/
 
 .module-form {
+  &--custom {
+    .module_container--content {
+      display:none;
+    }
+  }
   .module {
     &_container--content {
       margin-left: -20px;
